icons-gap correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,10 +41,13 @@ svg {
 .w-160{
     width: 160px;
 }
-
+.gap-10{
+    gap: 10px;
+}
+/* 
 .gap-21 {
     gap: 21px;
-}
+} */
 .ff-ibm{
     font-family: IBM Plex Mono;
 }
@@ -87,6 +90,9 @@ width: 100%;
             position: absolute;
             left: 16%;
             top: 78%;
+        }
+        .gap-lg-21{
+            gap: 21px !important;
         }
 }
 /* @media (min-width:768px) and(max-width:992px) {
